--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -15,11 +15,11 @@
     <td><%= user.email %></td>
     <td><%= link_to 'Show', user %></td>
     <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', user, :method => :delete %></td>
   </tr>
 <% end %>
 </table>
 
-<br />
+<br/>
 
 <%= link_to 'New User', new_user_path %>
