--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@micropost) do |f| %>
+<%= form_for([@user, @micropost], :html => { :multipart => true }) do |f| %>
   <% if @micropost.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@micropost.errors.count, "error") %> prohibited this micropost from being saved:</h2>
