--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -13,13 +13,13 @@
   <tr>
     <td><%= micropost.content %></td>
     <td><%= micropost.user_id %></td>
-    <td><%= link_to 'Show', micropost %></td>
-    <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
-    <td><%= link_to 'Destroy', micropost, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+    <td><%= link_to 'Show' , [@user, micropost] %></td>
+    <td><%= link_to 'Edit', edit_user_micropost_path(@user, @micropost) %></td>
+    <td><%= link_to 'Destroy', [@user, micropost], :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
 
 <br />
 
-<%= link_to 'New Micropost', new_micropost_path %>
+<%= link_to 'New Micropost', new_user_micropost_path(@user) %>
