changed views for request specs

--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <b>Content:</b>
   <%= @micropost.content %>
@@ -7,7 +5,7 @@
 
 <p>
   <b>User:</b>
-  <%= @micropost.user_id %>
+  <%= @micropost.user.name %>
 </p>
 
 
