--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -12,10 +12,10 @@
 <% @microposts.each do |micropost| %>
   <tr>
     <td><%= micropost.content %></td>
-    <td><%= micropost.user_id %></td>
+    <td><%= micropost.user.name %></td>
     <td><%= link_to 'Show' , [@user, micropost] %></td>
     <td><%= link_to 'Edit', edit_user_micropost_path(@user, micropost) %></td>
-    <td><%= link_to 'Destroy', [@user, micropost], :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+    <td><%= link_to 'Destroy', [@user, micropost], :method => :delete %></td>
   </tr>
 <% end %>
 </table>
