--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -10,4 +10,4 @@
 
 
 <%= link_to 'Edit', edit_user_micropost_path(@user) %> |
-<%= link_to 'Back', user_microposts_path %>
+<%= link_to 'Back', user_microposts_path(@user) %>
